fixed prim font in dark mode which were missing

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -41,7 +41,10 @@ h4 {
 h1,
 h2,
 h3,
-h4 {
+h4,
+p,
+ul,
+li {
   color: var(--primary-color);
 }
 
